syntax = "proto3";

package intellidocs;

message ProcessDocumentRequest {
    repeated string document_paths = 1;
}

message ProcessDocumentResponse {
    string message = 1;
}

message RetrieveTopNRequest {
    string user_query = 1;
    string doc_key = 2;
    int32 top_n = 3;
}

message RetrieveTopNResponse {
    repeated RetrievedChunks chunks = 1;
}

message RetrievedChunks {
    string chunks = 1;
    float score = 2;
}

service IntelliDocsService {
    rpc ProcessDocuments (ProcessDocumentRequest) returns (ProcessDocumentResponse);

    rpc RetrieveTopN (RetrieveTopNRequest) returns (RetrieveTopNResponse);
}